--- a/Bastion/Assets/Game.Ecs.Ui/Server/game.ecs.ui.server.asmdef
+++ b/Bastion/Assets/Game.Ecs.Ui/Server/game.ecs.ui.server.asmdef
@@ -19,7 +19,9 @@
         "GUID:9e24947de15b9834991c9d8411ea37cf",
         "GUID:593a5b492d29ac6448b1ebf7f035ef33",
         "GUID:94b76ab488496fe4ba2e594d6c583770",
-        "GUID:4185675af2c91ce438157b41079cd107"
+        "GUID:4185675af2c91ce438157b41079cd107",
+        "GUID:30a86c3dc470e694e81a4c82927d6b7c",
+        "GUID:d8b63aba1907145bea998dd612889d6b"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
