--- a/Bastion/Assets/Game.Ecs/Ai/Navigation/game.ecs.ai.navigation.asmdef
+++ b/Bastion/Assets/Game.Ecs/Ai/Navigation/game.ecs.ai.navigation.asmdef
@@ -12,7 +12,9 @@
         "GUID:8e4577c9194c10845984cf27eb974fd1",
         "GUID:f51ebe6a0ceec4240a699833d6309b23",
         "GUID:4185675af2c91ce438157b41079cd107",
-        "GUID:c1d53fc1b1b71c647b00626be502b7b1"
+        "GUID:c1d53fc1b1b71c647b00626be502b7b1",
+        "GUID:dbdcac4b6a71b4f4a961563608d4d3a4",
+        "GUID:e392e4bdca95458a91125abb7c77e5dd"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
