--- a/Bastion/Assets/Game.Ecs/Ai/game.ecs.ai.asmdef
+++ b/Bastion/Assets/Game.Ecs/Ai/game.ecs.ai.asmdef
@@ -10,7 +10,8 @@
         "GUID:560b04d1a97f54a4e82edc0cbbb69285",
         "GUID:b10aac27e5bc3d74f9892b100a74487f",
         "GUID:8e4577c9194c10845984cf27eb974fd1",
-        "GUID:f51ebe6a0ceec4240a699833d6309b23"
+        "GUID:f51ebe6a0ceec4240a699833d6309b23",
+        "GUID:4185675af2c91ce438157b41079cd107"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
