--- a/Bastion/Assets/Game.Ecs/Energy/game.ecs.feature.energy.asmdef
+++ b/Bastion/Assets/Game.Ecs/Energy/game.ecs.feature.energy.asmdef
@@ -15,7 +15,8 @@
         "GUID:dd8673e534f84de4bbbfe3f43621102c",
         "GUID:a0b431bd9232ee0439a3722ec36414ed",
         "GUID:b48f2927b162c3a43ab9ec6fa8165d4e",
-        "GUID:e06a58708b83247ca9dc984644f5b40b"
+        "GUID:e06a58708b83247ca9dc984644f5b40b",
+        "GUID:4185675af2c91ce438157b41079cd107"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
