+Layers and Categories +Crystal Prefab

--- a/Bastion/Assets/Game.Ecs/Ai/Navigation/game.ecs.ai.navigation.asmdef
+++ b/Bastion/Assets/Game.Ecs/Ai/Navigation/game.ecs.ai.navigation.asmdef
@@ -14,7 +14,9 @@
         "GUID:4185675af2c91ce438157b41079cd107",
         "GUID:c1d53fc1b1b71c647b00626be502b7b1",
         "GUID:dbdcac4b6a71b4f4a961563608d4d3a4",
-        "GUID:e392e4bdca95458a91125abb7c77e5dd"
+        "GUID:e392e4bdca95458a91125abb7c77e5dd",
+        "GUID:eba2faf03b2217843b1d862cf6af57fb",
+        "GUID:4a55c9149f7719a48861827fce7d85c1"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
