--- a/Bastion/Assets/Game.Ecs/Ai/game.ecs.ai.asmdef
+++ b/Bastion/Assets/Game.Ecs/Ai/game.ecs.ai.asmdef
@@ -11,7 +11,12 @@
         "GUID:b10aac27e5bc3d74f9892b100a74487f",
         "GUID:8e4577c9194c10845984cf27eb974fd1",
         "GUID:f51ebe6a0ceec4240a699833d6309b23",
-        "GUID:4185675af2c91ce438157b41079cd107"
+        "GUID:4185675af2c91ce438157b41079cd107",
+        "GUID:069f260d730447a39a1afd811a2be520",
+        "GUID:638b9e43626d4137a8482ffa90614976",
+        "GUID:966f01aff3301cb449a4595679577a3a",
+        "GUID:728a4ceae5634396894497a2a867d104",
+        "GUID:bd672d17946445fba4d3795a33a4069c"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
