+add relationship feature

--- a/Bastion/Assets/Game.Ecs/Ai/game.ecs.ai.asmdef
+++ b/Bastion/Assets/Game.Ecs/Ai/game.ecs.ai.asmdef
@@ -16,7 +16,10 @@
         "GUID:638b9e43626d4137a8482ffa90614976",
         "GUID:966f01aff3301cb449a4595679577a3a",
         "GUID:728a4ceae5634396894497a2a867d104",
-        "GUID:bd672d17946445fba4d3795a33a4069c"
+        "GUID:bd672d17946445fba4d3795a33a4069c",
+        "GUID:b235fd5fa3fc81048b5e704144248b58",
+        "GUID:14c7eded2cd7413e845572c7a54cf46c",
+        "GUID:c1d53fc1b1b71c647b00626be502b7b1"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
