--- a/Bastion/Assets/Game.Ecs/Game/game.ecs.gameroot.asmdef
+++ b/Bastion/Assets/Game.Ecs/Game/game.ecs.gameroot.asmdef
@@ -14,7 +14,8 @@
         "GUID:5f152d2c085e82e4cb666473f78648dc",
         "GUID:dd8673e534f84de4bbbfe3f43621102c",
         "GUID:a0b431bd9232ee0439a3722ec36414ed",
-        "GUID:b48f2927b162c3a43ab9ec6fa8165d4e"
+        "GUID:b48f2927b162c3a43ab9ec6fa8165d4e",
+        "GUID:eba2faf03b2217843b1d862cf6af57fb"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
