--- a/Bastion/Assets/Game.Ecs/Ai/game.ecs.ai.asmdef
+++ b/Bastion/Assets/Game.Ecs/Ai/game.ecs.ai.asmdef
@@ -19,7 +19,9 @@
         "GUID:bd672d17946445fba4d3795a33a4069c",
         "GUID:b235fd5fa3fc81048b5e704144248b58",
         "GUID:14c7eded2cd7413e845572c7a54cf46c",
-        "GUID:c1d53fc1b1b71c647b00626be502b7b1"
+        "GUID:c1d53fc1b1b71c647b00626be502b7b1",
+        "GUID:d57616234603a8d4183e57e62a8f1faa",
+        "GUID:c2f35cbf0d9c448ca2eb6ec8c3ff41f5"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
