+unit death after attack (still bug)

--- a/Bastion/Assets/Game.Ecs/Ai/game.ecs.ai.asmdef
+++ b/Bastion/Assets/Game.Ecs/Ai/game.ecs.ai.asmdef
@@ -21,7 +21,8 @@
         "GUID:14c7eded2cd7413e845572c7a54cf46c",
         "GUID:c1d53fc1b1b71c647b00626be502b7b1",
         "GUID:d57616234603a8d4183e57e62a8f1faa",
-        "GUID:c2f35cbf0d9c448ca2eb6ec8c3ff41f5"
+        "GUID:c2f35cbf0d9c448ca2eb6ec8c3ff41f5",
+        "GUID:0c006907327e4188b9693fd7f4389b76"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
