--- a/Bastion/Assets/Game.Ecs.Ui/Healthbar/game.ecs.ui.healthbar.asmdef
+++ b/Bastion/Assets/Game.Ecs.Ui/Healthbar/game.ecs.ui.healthbar.asmdef
@@ -32,7 +32,9 @@
         "GUID:c2f35cbf0d9c448ca2eb6ec8c3ff41f5",
         "GUID:d57616234603a8d4183e57e62a8f1faa",
         "GUID:4a55c9149f7719a48861827fce7d85c1",
-        "GUID:07371249c1894a31ba395c4976b31a6f"
+        "GUID:07371249c1894a31ba395c4976b31a6f",
+        "GUID:bd672d17946445fba4d3795a33a4069c",
+        "GUID:57b35561d85cc4c489f6b87aa06c26f8"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
